objects/SBQQ__LookupQuery__c.object
<CustomObject>
    <customHelpPage>SBQQ__LookupQueryHelp</customHelpPage>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__LookupField__c</fullName>
        <description>API Name of the custom field used in the query.</description>
        <inlineHelpText>API Name of the custom field used in the query.</inlineHelpText>
        <label>Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Category__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__MatchType__c</fullName>
        <description>If Match Type = Field Value, select a Tested Object and Tested Field. If Match Type = Static Value, enter the value into Tested Value. If Match Type = Configuration Attribute, specify a Configuration Attribute.</description>
        <inlineHelpText>If Match Type = Field Value, select a Tested Object and Tested Field. If Match Type = Static Value, enter the value into Tested Value. If Match Type = Configuration Attribute, specify a Configuration Attribute.</inlineHelpText>
        <label>Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Value</fullName>
                </value>
                <value>
                    <fullName>Static Value</fullName>
                </value>
                <value>
                    <fullName>Configuration Attribute Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator that is applied when comparing the Field with the Value.</description>
        <inlineHelpText>The operator that is applied when comparing the Field with the Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentRuleIsActive__c</fullName>
        <formula>SBQQ__PriceRule2__r.SBQQ__Active__c || SBQQ__ProductRule__r.SBQQ__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRuleIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceRule2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Rule associated with this Lookup Query. Replaces the legacy master-detail field.</description>
        <inlineHelpText>Price Rule associated with this Lookup Query. Replaces the legacy master-detail field.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>SBQQ__PriceRule__c</referenceTo>
        <relationshipLabel>Lookup Queries (Price Rule)</relationshipLabel>
        <relationshipName>PriceRuleLookupQueries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Rule associated with this Lookup Query</description>
        <inlineHelpText>Product Rule associated with this Lookup Query</inlineHelpText>
        <label>Product Rule</label>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Lookup Queries (Product Rule)</relationshipLabel>
        <relationshipName>ProductRuleLookupQueries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleLookupObject__c</fullName>
        <formula>TEXT(SBQQ__PriceRule2__r.SBQQ__LookupObject__c)</formula>
        <label>Parent Rule Lookup Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleTargetsCalculator__c</fullName>
        <formula>ISPICKVAL(SBQQ__PriceRule2__r.SBQQ__TargetObject__c, &apos;Calculator&apos;) || ISPICKVAL(SBQQ__PriceRule2__r.SBQQ__TargetObject__c, &apos;Quote Line&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsCalculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TestedConfigurationAttribute__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Configuration Attribute that is evaluated by this query. Required if Match Type = Configuration Attribute and only if this Query is associated with a Product Rule.</description>
        <inlineHelpText>Configuration Attribute that is evaluated by this query. Required if Match Type = Configuration Attribute and only if this Query is associated with a Product Rule.</inlineHelpText>
        <label>Tested Configuration Attribute</label>
        <referenceTo>SBQQ__ConfigurationAttribute__c</referenceTo>
        <relationshipLabel>Lookup Queries</relationshipLabel>
        <relationshipName>LookupQueries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TestedField__c</fullName>
        <description>Field on Quote, Quote Line or Product Option object that is evaluated by this query. Required if Match Type = Field Value.</description>
        <inlineHelpText>Field on Quote, Quote Line or Product Option object that is evaluated by this query. Required if Match Type = Field Value.</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TestedObject__c</fullName>
        <description>Object against which the query is evaluated. Required if Match Type = Field Value.</description>
        <inlineHelpText>Object against which the query is evaluated. Required if Match Type = Field Value.</inlineHelpText>
        <label>Tested Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TestedValue__c</fullName>
        <description>The value you want to match in the field you selected using the operator chosen. Required if Match Type = Static Value.</description>
        <inlineHelpText>The value you want to match in the field you selected using the operator chosen. Required if Match Type = Static Value.</inlineHelpText>
        <label>Tested Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lookup Query</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Lookup Query #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Configuration_Attribute_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(SBQQ__MatchType__c, &apos;Configuration Attribute Value&apos;) &amp;&amp; ISBLANK(SBQQ__ProductRule__c)</errorConditionFormula>
        <errorDisplayField>SBQQ__MatchType__c</errorDisplayField>
        <errorMessage>Testing Configuration Attributes is only supported for Lookup Queries associated with Product Rules.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__LookupObjectMustExist</fullName>
        <active>true</active>
        <description>Validation ensuring that Lookup Queries can only be created if there is a Lookup Object.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(SBQQ__ProductRule__c)), ISBLANK(TEXT(SBQQ__ProductRule__r.SBQQ__LookupObject__c)))</errorConditionFormula>
        <errorMessage>Associate a lookup object on the product rule before creating a Lookup Query.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Match_Type_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(SBQQ__MatchType__c, &apos;Configuration Attribute Value&apos;) &amp;&amp; ISBLANK(SBQQ__TestedConfigurationAttribute__c)) ||(ISPICKVAL(SBQQ__MatchType__c, &apos;Static Value&apos;) &amp;&amp; ISBLANK( SBQQ__TestedValue__c)) || (ISPICKVAL(SBQQ__MatchType__c, &apos;Field Value&apos;) &amp;&amp; (ISPICKVAL(SBQQ__TestedField__c, &apos;&apos;) || ISPICKVAL(SBQQ__TestedObject__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Tested Value is required if Match Type = Static Value. Tested Object and Tested Field are required if Match Type = Field Value. Tested Configuration Attribute is required if Match Type = Configuration Attribute.</errorMessage>
    </validationRules>
</CustomObject>